<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    tools:context=".ui.createData.CreateDataFragment">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_gravity="center"
            android:text="@string/select_type"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/typeChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:chipSpacingHorizontal="30dp"
                app:singleSelection="true">
                <com.google.android.material.chip.Chip
                    android:id="@+id/incomeChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/income"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/expenseChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:checkable="true"
                    android:text="@string/expense"/>

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_gravity="center"
            android:text="@string/amount"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/amount"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll2">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_gravity="center"
            android:text="@string/title"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll3">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_gravity="center"
            android:text="@string/tag"/>
        <LinearLayout
            android:id="@+id/addTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">
            <com.google.android.material.chip.ChipGroup
                android:layout_weight="8"
                android:id="@+id/tagChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </com.google.android.material.chip.ChipGroup>

            <ImageButton
                android:id="@+id/addTagIcon"
                android:layout_weight="1"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="?attr/colorBackgroundFloating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:src="@drawable/edit_icon_drawable"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/ll5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll4">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_gravity="center"
            android:text="@string/date"/>
        <LinearLayout
            android:id="@+id/dateContainer"
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"
                android:src="@drawable/calender_icon_drawable"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_gravity="center"
                android:layout_marginHorizontal="12dp"
                android:text="12/11/2001"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/ll6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll5">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_gravity="center"
            android:text="Description"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/description"
            android:hint="@string/optional"
            android:minLines="4"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="3"/>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>