<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.specificMonth.SpecificMonthFragment">

    <LinearLayout
        android:id="@+id/specificHeadingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/earnings"
                android:gravity="center"
                android:textColor="?attr/colorOnPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="?attr/colorOnPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/spendings"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/specificIncomeTextView"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="?attr/colorOnPrimary"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/specificExpenseTextView"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="?attr/colorOnPrimary"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/_0"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/specificHeadingLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</androidx.constraintlayout.widget.ConstraintLayout>