<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".ui.home.HomeFragment">

            <LinearLayout
                android:id="@+id/homeHeadingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingEnd="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/spinner_backgroud"
                    android:spinnerMode="dropdown" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:padding="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/earnings"
                        android:gravity="center"
                        android:textColor="?attr/colorOnPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="0dp"
                        android:padding="5dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="?attr/colorOnPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:text="@string/spendings"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/incomeTextView"
                        android:layout_width="0dp"
                        android:padding="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textColor="?attr/colorOnPrimary"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/expenseTextView"
                        android:layout_width="0dp"
                        android:padding="5dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="?attr/colorOnPrimary"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:text="@string/_0"/>

                </LinearLayout>

            </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeHeadingLayout"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/add_icon_drawable"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>